# kms

./: .editorconfig  .env  .gitignore  .kms-metadata.db  AGENTS.md  AGENTS.override.md  AGENTS.overrideXX.md  AutoAIdev_requirements.md  How2_AutoAIdev.md  README.md  conftest.py  eslint.config.js  package.json  pyproject.toml
.claude/: CLAUDE.md  project-memory.md  tech-stack.md
.codex/: config.toml  project-context.md  tech-stack.md
.github/: copilot-instructions.md  tech-stack.md
agents/: AGENTS.md  README.md
config/: .gitignore  README.md  runtime.env.example  secrets.example.yaml
design/: acceptance-criteria.md  ai-behavior-spec.md  api-contracts.md  architecture.md  build-scope.md  change-history.md  data-models.md  eval-plan.md  open-questions.md  system-design.md  ux-flows.md
dev_log/: backlog.md  change-log.md  code-update-log.md  decision-log.md  design-update-log.md  deviations-log.md  feedback-log.md  issue-log.md  iteration-log.md  release-notes.md  test-update-log.md  validation-log.md  validation-results.md  version-status.md
dev_workflow/: 00-design-update.md  01-baseline-sync.md  01-read-intent.md  02-create-plan.md  02-iteration-scope.md  03-implementation.md  03-update-design.md  04-self-review.md  04-update-tests.md  05-implement-code.md  05-validation.md  06-fix-loop.md  06-run-validation.md  07-design-audit.md  07-fix-failures.md  08-closeout.md  08-update-logs.md  09-detect-gaps.md  10-iteration-review.md  README.md  plan-update.md  workflow-improvement.md
docs/: kms-dev-prompts.md  kms-system-design.md
intent/: constraints-intent.md  (+4 more)
(+157 files in other folders)
