[project]
name = "kms"
version = "0.1.0"
description = "KMS Python backend services and shared packages"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "apps/api/src",
  "apps/worker/src",
  "packages/domain/src",
  "packages/shared/src",
  "packages/config/src"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

